export feature added

--- a/views/pages/auth/resetPassword.ejs
+++ b/views/pages/auth/resetPassword.ejs
@@ -1,35 +1,48 @@
-<%- include("../../partials/header.ejs") %>
+<%- include("../../partials/body.ejs") %>
 
-    <div class="container myContainer">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div class="card card-body mt-4">
-                    <h4 class="text-center">Reset Password</h4>
-                    <form action="/auth/reset-password" method="POST">
-                        <div class="form-group m-3">
-                            <input
-                                type="text"
-                                name="userId"
-                                id="userId"
-                                class="form-control <%= error.userId ? "is-invalid":"" %>"
-                                placeholder="Enter Your Institution ID"
-                            >
-                        </div>
-                        
-                        <div class="form-group  m-3">
-                        <input
-                            type="submit"
-                            class="btn btn-primary form-group ms-3"
-                            value="Reset"
-                        ></div>
-                    </form>
+
+        <div class="container myContainer">
+            <div class="row p-3">
+                <div class="col-md-12">
+                    <p class="p-3" style="min-height: 50px">
+                       
+                    </p>
                 </div>
-
+            </div>
+            <div class="row">
+                <div class="col-md-6 mt-5">
+                    <h5 id="qoutes"></h5>
+                </div>
+                <div class="col-md-5 offset-md-1">
+                    <h4 class="text-center mb-3 ">Reset Password</h4>
+                    <div class="card card-body">
+                        <form action="/auth/reset-password" method="POST">
+                            <div class="form-group m-3">
+                                <input
+                                    type="text"
+                                    name="userId"
+                                    id="userId"
+                                    class="form-control <%= error.userId ? "is-invalid":"" %>"
+                                    placeholder="Enter Your Institution ID"
+                                >
+                            </div>
+                            
+                            <div class="form-group  m-3">
+                            <input
+                                type="submit"
+                                class="btn btn-primary form-group ms-3"
+                                value="Reset"
+                            ></div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-<%- include("../../partials/footer.ejs") %>
 
-</body>
+    <%- include("../../partials/footer.ejs") %>
+    <script src="/scripts/qoutes.js"></script>
+
+    </body>
 
 </html>
