--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -114,11 +114,12 @@ a {
 }
 
 .icon{
-	width: 60px;
-	height: 60px;
+	width: 40px;
+	height: 40px;
+	color: #000000;
 	font-size: 20px;
 	display: flex;
-	background: #ffffff;
+	background:#ffffff;
 	justify-content: center;
 	align-items: center;
 	border-radius: 50%;
@@ -127,4 +128,79 @@ a {
 .profileProperties{
 	width: 100%;
 	border-radius: 5px;
+}
+
+.contactus{
+	background-image: url("/images/classroom2.jpg");
+	
+}
+
+.box{
+	position: absolute;
+	width: 60px;
+	height: 60px;
+	background-color: transparent;
+	border: 6px solid rgba(0, 0, 0, 0.8);
+	border-radius: 5px;
+}
+.box:nth-child(1){
+	top: 15%;
+	left: 24%;
+	animation: animate 10s linear infinite;
+}
+.box:nth-child(2){
+	top: 70%;
+	left: 45%;
+	animation: animate 7s linear infinite;
+}
+.box:nth-child(3){
+	top: 27%;
+	left: 6%;
+	animation: animate 9s linear infinite;
+}
+.box:nth-child(4){
+	top: 20%;
+	left: 50%;
+	animation: animate 10s linear infinite;
+}
+.box:nth-child(5){
+	top: 67%;
+	left: 15%;
+	animation: animate 6s linear infinite;
+}
+.box:nth-child(6){
+	top: 80%;
+	left: 95%;
+	animation: animate 12s linear infinite;
+}
+.box:nth-child(7){
+	top: 50%;
+	left: 50%;
+	animation: animate 15s linear infinite;
+}
+.box:nth-child(8){
+	top: 45%;
+	left: 30%;
+	animation: animate 16s linear infinite;
+}
+.box:nth-child(9){
+	top: 90%;
+	left: 25%;
+	animation: animate 9s linear infinite;
+}
+.box:nth-child(10){
+	top: 20%;
+	left: 80%;
+	animation: animate 5s linear infinite;
+}
+
+@keyframes animate{
+	0%{
+		transform: scale(0) translateX(0) rotate(0);
+		opacity: 1
+	}
+	100%{
+		transform: scale(1.3) translateX(-90px) rotate(360deg);
+		opacity: 0
+	}
 }
