--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -1,46 +1,56 @@
-<%- include("../../partials/header.ejs") %>
+<%- include("../../partials/body.ejs") %>
 
-    <div class="container myContainer">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div class="card card-body mt-4">
-                    <h4 class="text-center">Login To Your Acoount</h4>
-                    <form action="/auth/login" method="POST">
-                        <div class="form-group m-3">
-                            <input
-                                type="text"
-                                name="userId"
-                                id="userId"
-                                class="form-control <%= error.userId ? "is-invalid":"" %>"
-                                value="<%= values.userId? values.userId:"" %>"
-                                placeholder="Enter Your Institution ID"
-                            >
-                        </div>
-                        <div class="form-group m-3">
-                            <input
-                                type="password"
-                                name="password"
-                                id="password"
-                                class="form-control <%= error.password ? "is-invalid":"" %>"
-                                placeholder="Enter password"
-                            >
-                        </div>
-                        <div class="form-group  m-3">
-                        <input
-                            type="submit"
-                            class="btn btn-primary form-group ms-3"
-                            value="Login"
-                        ></div>
-                    </form>
-                    <a href="reset-password" class="my-3 text-center">Forgot password?</a>
-                    <!-- <a href="signup" class="mb-3 text-center">Don't have an account?</a> -->
+        <div class="container"style="min-height: 500px;">
+            <div class="row p-3">
+                <div class="col-md-12">
+                    <p class="p-3" style="height: 50px">
+                       
+                    </p>
                 </div>
-
+            </div>
+            <div class="row">
+                <div class="col-md-6 mt-5 pt-5">
+                    <h4 id="qoutes"></h4>
+                </div>
+                <div class="col-md-5 offset-md-1">
+                    <h4 class="text-center mb-3 ">Login To Your Acoount</h4>
+                    <div class="card card-body">
+                        <form action="/auth/login" method="POST">
+                            <div class="form-group m-3">
+                                <input
+                                    type="text"
+                                    name="userId"
+                                    id="userId"
+                                    class="form-control <%= error.userId ? "is-invalid":"" %>"
+                                    value="<%= values.userId? values.userId:"" %>"
+                                    placeholder="Enter Your Institution ID"
+                                >
+                            </div>
+                            <div class="form-group m-3">
+                                <input
+                                    type="password"
+                                    name="password"
+                                    id="password"
+                                    class="form-control <%= error.password ? "is-invalid":"" %>"
+                                    placeholder="Enter password"
+                                >
+                            </div>
+                            <div class="form-group  m-3">
+                            <input
+                                type="submit"
+                                class="btn btn-primary form-group ms-3"
+                                value="Login"
+                            ></div>
+                        </form>
+                        <a href="reset-password" class="my-3 text-center">Forgot password?</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-<%- include("../../partials/footer.ejs") %>
 
-</body>
+    <%- include("../../partials/footer.ejs") %>
+    <script src="/scripts/qoutes.js"></script>
+    </body>
 
 </html>
