--- a/views/pages/auth/newPassword.ejs
+++ b/views/pages/auth/newPassword.ejs
@@ -1,50 +1,62 @@
-<%- include("../../partials/header.ejs") %>
+<%- include("../../partials/body.ejs") %>
 
-    <div class="container myContainer">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div class="card card-body mt-4">
-                    <h4 class="text-center">New Password</h4>
-                    <form action="/auth/reset-password/<%=token%>" method="POST">
-                        
-                        <div class="form-group m-3">
-                            <input
-                                type="password"
-                                name="newPassword"
-                                id="newPassword"
-                                class="form-control <%= error.newPassword ? "is-invalid" : "" %> "
-                                placeholder="Enter new password(Min 6 character)"
-                            >
-                            <div class="invalid-feedback">
-                                <%= error.newPassword && error.newPassword %> 
-                            </div>
-                        </div>
-                        <div class="form-group m-3">
-                            <input
-                                type="password"
-                                name="confirmPassword"
-                                id="confirmPassword"
-                                class="form-control <%= error.confirmPassword ? "is-invalid" : "" %> "
-                                placeholder="Confirm Password"
-                            >
-                            <div class="invalid-feedback">
-                                <%= error.confirmPassword && error.confirmPassword %> 
-                            </div>
-                        </div>
-                        <div class="form-group m-3">
-                        <input
-                            type="submit"
-                            class="btn btn-primary form-group ms-3"
-                            value="Save"
-                        ></div>
-                    </form>
+        <div class="container myContainer"style="min-height: 495px;">
+            <div class="row p-3">
+                <div class="col-md-12">
+                    <p class="p-3" style="height: 50px">
+                       
+                    </p>
                 </div>
-
+            </div>
+            <div class="row">
+                <div class="col-md-6 mt-5">
+                    <h5 id="qoutes"></h5>
+                </div>
+                <div class="col-md-5 offset-md-1">
+                    <h4 class="text-center mb-3 ">New Password</h4>
+                    <div class="card card-body">
+                        <form action="/auth/reset-password/<%=token%>" method="POST">
+                        
+                            <div class="form-group m-3">
+                                <input
+                                    type="password"
+                                    name="newPassword"
+                                    id="newPassword"
+                                    class="form-control <%= error.newPassword ? "is-invalid" : "" %> "
+                                    placeholder="Enter new password(Min 6 character)"
+                                >
+                                <div class="invalid-feedback">
+                                    <%= error.newPassword && error.newPassword %> 
+                                </div>
+                            </div>
+                            <div class="form-group m-3">
+                                <input
+                                    type="password"
+                                    name="confirmPassword"
+                                    id="confirmPassword"
+                                    class="form-control <%= error.confirmPassword ? "is-invalid" : "" %> "
+                                    placeholder="Confirm Password"
+                                >
+                                <div class="invalid-feedback">
+                                    <%= error.confirmPassword && error.confirmPassword %> 
+                                </div>
+                            </div>
+                            <div class="form-group m-3">
+                            <input
+                                type="submit"
+                                class="btn btn-primary form-group ms-3"
+                                value="Save"
+                            ></div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-<%- include("../../partials/footer.ejs") %>
 
-</body>
+    <%- include("../../partials/footer.ejs") %>
+    <script src="/scripts/qoutes.js"></script>
+    
+    </body>
 
 </html>
