--- a/views/pages/dashboard/course/take-attendance.ejs
+++ b/views/pages/dashboard/course/take-attendance.ejs
@@ -1,79 +1,93 @@
 <%- include('../../../partials/header.ejs') %>
     <form action="/courses/take-attendance/<%= course._id %>" method="POST">
-        <div class="row mb-2">
-            <% if (owner) { %>
-                <div class="container-fluid">
-                    <div class="col-md-8 offset-md-2">
-                        <div class="row">
-                            <div class="card card-body mx-5 my-3">
-                                <button
-                                    type="submit" value="takeAttendance"
-                                    class="btn btn-primary btn-sm my-2"
-                                    name="action" <%= attendances.length ? "" : "disabled"%> 
-                                >Take Attendance</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            <% } %>
-
+        <div class="row">
             <div class="card card-body mx-5">
-                <h4 class="text-center mb-4">Your Attendance List</h4>
-
-
-                <div class="row border-top border-danger">
-                    <div class="col-md-6 d-flex">
-                        <h5 class="mt-3">
-                            <span class="courseInfoInattendance p-2 mr-2">
+                <h4 class="text-center mt-2 mb-4">Your Attendance List</h4>
+                <div class="row">
+                    <div class="col-lg-5 d-flex">
+                        <div class="col-lg-5">
+                            <h5>
                                 <%= course.title %> - <%= course.batch %>
-                            </span>
-                            <span class="courseInfoInattendance p-2 mr-2">
-                                <%= course.term %>
-                            </span>
-                            <span class="courseInfoInattendance p-2">Joining Code: <%= course.joiningCode %>
-                            </span>
-                        </h5>
-                    </div>
-                    <% if (attendances.length && owner) { %>
-                        <div class="col-md-6 d-flex flex-row-reverse">
-                            <div class="form-group">
-                                <input type="text" name="userId" id="userId" class="pb-1 text-center form"
-                                    placeholder="Enter student ID">
-                                <input type="date" name="date" class="pb-1">
-                                <button type="submit" value="Search" class="btn btn-primary btn-sm my-2"
-                                    name="action">Search</button>
-
-                            </div>
+                            </h5>
                         </div>
-                    <% } %>
+                        <div class="col-lg-3">
+                            <%= course.term %>
+                        </div>
+                        <div class="col-lg-4">
+                            Join Code: <%= course.joiningCode %>
+                        </div>
+                    </div>
 
+                    <div class="col-lg-7 d-flex">
+                        <div class="col-lg-3">
+                            <% if (owner) { %>
+                                <div class="">
+                                    <button 
+                                        type="submit" value="takeAttendance"
+                                        class="btn btn-primary btn-sm"
+                                        name="action"
+                                        <%=attendances.length ? "" : "disabled" %>
+                                    >
+                                        Take Attendance
+                                    </button>
+                                </div>
+                            <% } %>
+                        </div>
+                        
+                        <% if (attendances.length && owner) { %>
+                            <div class="col-lg-9">
+                                <div class="form-group">
+                                    <input
+                                        type="text" name="userId" id="userId"
+                                        class="text-center form"
+                                        placeholder="Enter student ID"
+                                    >
+                                    <input
+                                        type="date" name="date"
+                                    >
+                                    <button
+                                        type="submit" value="Search"
+                                        class="btn btn-primary btn-sm"
+                                        name="action"
+                                    >
+                                        Search
+                                    </button>
+    
+                                </div>
+                            </div>
+                        <% } %>
+                    </div>
                 </div>
-
-                <div class="row border-top border-danger">
+                <div class="row">
                     <% if (attendances.length) { %>
                         <%- include("./attendanceTable.ejs") %>
                         <% if (owner) { %>
-                            <button
-                                type="submit" value="update" style="width: 80px;"
-                                class="btn btn-primary btn-sm my-2" name="action"
-                                method="POST"
-                                onclick = "GetCellValues('<%= attendances[0].course%>')"
-                            >
+                            <button type="submit" value="update" style="width: 80px;"
+                                class="btn btn-primary btn-sm my-2" name="action" method="POST"
+                                onclick="GetCellValues('<%= attendances[0].course%>')">
                                 update
                             </button>
                         <% } %>
                     <% } else { %>
-                     <div class="container my-5 text-center">
-                        <h1>No one joined in this course !</h1>
-                     </div>
+                        <div class="container my-5 text-center">
+                            <h1>No one joined in this course !</h1>
+                        </div>
                     <% } %>
-                    
                 </div>
             </div>
         </div>
     </form>
+    <form action="/courses/attendances/export/<%= course._id %>">
+        <% if (owner && attendances.length) { %>
+            <button type="submit" value="Export" style="width: 80px;"
+                class="btn btn-primary btn-sm my-2"
+            >
+                Export
+            </button>
+        <% } %>
+    </form>
     <%- include("../../../partials/footer.ejs") %>
 
-        </body>
+    </body>
 
-        </html>
+</html>
