--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,7 +7,9 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
-	background: #F0F2F5;
+	/* background: #F0F2F5; */
+	background: #343A40;
+	min-height: 640px;
 }
 
 .myContainer {
