attendance page refactor

--- a/views/pages/dashboard/course/createCourse.ejs
+++ b/views/pages/dashboard/course/createCourse.ejs
@@ -14,7 +14,7 @@
                     <h5 id="qoutes"></h5>
                 </div>
                 <div class="col-md-5 offset-md-1">
-                    <h4 class="text-center mb-3 ">Create Course</h4>
+                    <h4 class="text-center text-white mb-3 ">Create Course</h4>
                     <div class="card card-body">
                         <form action="/courses/create" method="POST">
                             <div class="form-group mb-3">
