--- a/views/pages/dashboard/course/editCourse.ejs
+++ b/views/pages/dashboard/course/editCourse.ejs
@@ -1,6 +1,5 @@
 <%- include("../../../partials/body.ejs") %>
 
-
         <div class="container container-fluid"style="min-height: 495px;">
             <div class="row p-3">
                 <div class="col-md-12">
@@ -11,7 +10,7 @@
             </div>
             <div class="row">
                 <div class="col-md-5 offset-md-1">
-                    <h4 class="text-center mb-3 ">Update Course</h4>
+                    <h4 class="text-center text-white mb-3 ">Update Course</h4>
                     <div class="card card-body">
                         <form action="/courses/edit-course/<%= value._id %>" method="POST">
                             <div class="form-group mb-3">
