--- a/views/pages/dashboard/course/attendanceTable.ejs
+++ b/views/pages/dashboard/course/attendanceTable.ejs
@@ -1,4 +1,5 @@
 <div class="col-md-12 bg-white rounded shadow mt-2">
+    <h4 class="text-center"><u>Your Attendance List</u></h4>
     <table class="table table-hover" id="table">
         <thead class="table-active">
             <tr>
@@ -10,10 +11,14 @@
                 <% } %>
                 <% if (!add) { %>
                     <th scope="col">
-                        <button type="submit" value="add" name="action"
-                        class="btn btn-link">
-                        <i class="fas fa-plus-circle fa-lg"></i>
-                        </button>
+                        <form action="/courses/attendances/add/<%= course._id %>" method="POST">
+                            <button
+                                type="submit" value="add" name="action"
+                                class="btn btn-link"
+                            >
+                                <i class="fas fa-plus-circle fa-lg"></i>
+                            </button>
+                        </form>
                     </th>
                 <% } %> 
             </tr>
@@ -88,9 +93,9 @@ function getValue(inputTag) {
 }
 
 function GetCellValues(courseId) {
-    console.log(value);
+    console.log("values", value);
 
-    let url = `http://localhost:3000/courses/attendance/update/${courseId}`;
+    let url = `http://localhost:3000/courses/attendances/update/${courseId}`;
     $.ajax({
         type: "POST",
         url,
