--- a/views/pages/dashboard/create-profile.ejs
+++ b/views/pages/dashboard/create-profile.ejs
@@ -10,7 +10,7 @@
             <div class="col-md-8">
                 <div class="row">
                     <div class="col-md-7 offset-md-2">
-                        <h4 class="text-center my-2">
+                        <h4 class="text-center text-white my-2">
                             <%= title %>
                         </h4>
                         <div class="card card-body my-5">
