--- a/views/pages/dashboard/profile.ejs
+++ b/views/pages/dashboard/profile.ejs
@@ -8,7 +8,7 @@
             <div class="col-md-8">
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
-                        <h4 class="text-center mt-3">
+                        <h4 class="text-center text-white mt-3">
                             <%= title %>
                         </h4>
                         <div class="card card-body mb-5">
