--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -143,7 +143,7 @@ a {
 	height: 60px;
 	background-color: transparent;
 	border: 6px solid rgba(0, 0, 0, 0.8);
-	border-radius: 5px;
+	border-radius: 50%;
 }
 .box:nth-child(1){
 	top: 15%;
