--- a/views/pages/dashboard/dashboard.ejs
+++ b/views/pages/dashboard/dashboard.ejs
@@ -6,6 +6,7 @@
                 <%- include('../../partials/sidebar.ejs') %>
             </div>
             <div class="col-md-8 offset-md-4 mx-2">
+                <%- include('../../partials/dashboardCards.ejs') %>
             </div>
         </div>        
     </div>
