--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-info mb-3">
     <div class="container">
         <a class="navbar-brand" href="/">AAS</a>
 
@@ -20,6 +20,9 @@
                     <li class="nav-item px-2">
                         <a class="nav-link text-white" onclick="togglePopup()">Join Class</a>
                     </li>
+                    <li class="nav-item px-2">
+                        <a class="nav-link text-white" href="/inbox">Inbox</a>
+                    </li>
                     <li class="nav-item dropdown px-2">
                         <img src=" <%= user.profilePics %> " alt="profile pics" class="img-fluid rounded-circle"
                             id="profilePics" style="width: 45px; height: 40px;">
@@ -32,6 +35,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="/auth/change-password">Change Password</a>
                             <a class="dropdown-item" href="/dashboard/edit-profile">Edit profile</a>
+                            <a class="dropdown-item" href="/dashboard/sample-picture">Sample picture</a>
                             <a class="dropdown-item" href="/auth/logout">Logout</a>
                         </div>
                     </li>
