--- a/views/pages/inbox/inboxPage.ejs
+++ b/views/pages/inbox/inboxPage.ejs
@@ -4,7 +4,12 @@
         <div class="col-md-3">
             <%- include("./conversationList.ejs") %> 
         </div>
-        <div class="col-md-8 border border-info">
+        <div class="col-md-8">
+            <div class="row m-3" style=" border-bottom: 2px solid #192a3d; border-radius: 10px;">
+                <div class="col-md-12 text-center">
+                    <h4 class="text-white">Conversations</h4>
+                </div>
+            </div>
             <%- include("./conversations.ejs") %> 
         </div>
     </div>
