--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="bg-dark">
+<footer class="bg-dark border-top border-info mt-2">
     <p class="lead">
         Copyright &copy; 2021
     </p>
