--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -67,10 +67,9 @@
     let year = date.getFullYear();
     let month = months[date.getMonth()];
     let day = date.getDate();
-    let hours = date.getHours();
-    let minutes = date.getMinutes();
+    let time = date.toLocaleString('en-US', { hour: 'numeric', minute: 'numeric', hour12: true });
 
-    date = `${bar}, ${day}-${month}-${year} ${hours} : ${minutes}`;
+    date = `${bar}, ${day}-${month}-${year} ${time}`;
     document.getElementById("date").innerHTML = date;
 
     setInterval(() => {
@@ -80,10 +79,9 @@
     year = date.getFullYear();
     month = months[date.getMonth()];
     day = date.getDate();
-    hours = date.getHours();
-    minutes = date.getMinutes();
+    let time = date.toLocaleString('en-US', { hour: 'numeric', minute: 'numeric', hour12: true });
 
-    date = `${bar}, ${day}-${month}-${year} ${hours} : ${minutes}`;
+    date = `${bar}, ${day}-${month}-${year} ${time}`;
     document.getElementById("date").innerHTML = date;
     },1000)
 </script>
