--- a/views/pages/inbox/conversationList.ejs
+++ b/views/pages/inbox/conversationList.ejs
@@ -1,14 +1,9 @@
-<div class="container">
-    <div class="row m-3" style=" border-bottom: 2px solid #192a3d; border-radius: 10px;">
-        <div class="col-md-12 text-center">
-            <h4 class="text-white">Conversation List</h4>
-        </div>
-    </div>
-    <div class="row m-3">
+<div>
+    <div class="row">
         <div class="col-md-12">
             <% if (value.length) { %>
                 <% for( let conversation of value) { %>
-                    <h6 class="m-2 py-2 pl-2" style="border-radius: 5px; background-color: #192a3d;">
+                    <h6 class="my-2">
                         <a class ="text-white" href="/inbox/conversations/<%= conversation._id %>">
                             <%= conversation.title %>
                         </a> 
