--- a/views/pages/inbox/inboxPage.ejs
+++ b/views/pages/inbox/inboxPage.ejs
@@ -19,7 +19,9 @@
                     <%- include("./conversationList.ejs") %> 
                 </div>
             </div>
-            <div class="col-md-8"></div>
+            <div class="col-md-8">
+                
+            </div>
         </div>
     </div>
     <div class="col-md-2"></div>
