--- a/views/pages/inbox/inboxPage.ejs
+++ b/views/pages/inbox/inboxPage.ejs
@@ -19,8 +19,8 @@
                     <%- include("./conversationList.ejs") %> 
                 </div>
             </div>
-            <div class="col-md-8">
-                
+            <div class="col-md-9">
+                <%- include("./conversations.ejs") %>
             </div>
         </div>
     </div>
